// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Skill  Skill --->level = familiar 1`] = `
<div
  className="skill"
>
  <div>
    <div
      className="normal"
    >
      familiar normal Skill
    </div>
    <div
      className="subTitle"
    >
      5
       years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Familiar
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = familiar 2`] = `
<div
  className="skill"
>
  <div>
    <div
      className="less"
    >
      familiar less Skill
    </div>
    <div
      className="subTitle"
    >
      5
       years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Familiar
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = familiar 3`] = `
<div
  className="skill"
>
  <div>
    <div
      className="important"
    >
      familiar important Skill
    </div>
    <div
      className="subTitle"
    >
      5
       years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Familiar
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = proficient 1`] = `
<div
  className="skill"
>
  <div>
    <div
      className="normal"
    >
      proficient normal Skill
    </div>
    <div
      className="subTitle"
    >
      5
       years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span />
    <span />
    <span />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Proficient
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = proficient 2`] = `
<div
  className="skill"
>
  <div>
    <div
      className="less"
    >
      proficient less Skill
    </div>
    <div
      className="subTitle"
    >
      5
       years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Understand
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = proficient 3`] = `
<div
  className="skill"
>
  <div>
    <div
      className="important"
    >
      proficient important Skill
    </div>
    <div
      className="subTitle"
    >
      5
       years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Understand
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = understand 1`] = `
<div
  className="skill"
>
  <div>
    <div
      className="normal"
    >
      understand normal Skill
    </div>
    <div
      className="subTitle"
    >
      5
       years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Understand
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = understand 2`] = `
<div
  className="skill"
>
  <div>
    <div
      className="less"
    >
      understand less Skill
    </div>
    <div
      className="subTitle"
    >
      5
       years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Understand
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = understand 3`] = `
<div
  className="skill"
>
  <div>
    <div
      className="important"
    >
      understand important Skill
    </div>
    <div
      className="subTitle"
    >
      5
       years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Understand
    </div>
  </div>
</div>
`;
